syntax='proto3';

package vika.grpc;

import 'socket.message.proto';


service SocketService {
  rpc WatchRoom (WatchRoomRo) returns (WatchRoomVo);

  rpc LeaveRoom(LeaveRoomRo) returns (BasicResult);

  rpc RoomChange(UserRoomChangeRo) returns (UserRoomChangeVo);
  // get all active users in the current room
  rpc GetActiveCollaborators (WatchRoomRo) returns (GetActiveCollaboratorsVo);
}
